--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-html-email": "^3.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
